# fastapi-htmx

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  tailwind.config.js
src/app/: admin.py  db.py  deps.py  main.py  models.py  routes.py  settings.py
src/migrations/: 000_init.sql
src/static/css/: main.css
src/templates/: home.html
src/templates/components/: base.html  footer.html  header.html
src/templates/components/user/: form.html  table.html
src/templates/partials/: base.html  footer.html  header.html
src/templates/partials/user/: table.html
