[tool.poetry]
name = "fastapi-htmx"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
Jinja2 = "^3.1.2"
uvicorn = "^0.23.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
sqlalchemy-utils = "^0.41.1"
jinja2-fragments = "^1.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pytailwindcss = "^0.2.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pylint = "^3.0.0"
djlint = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile="django"
preserve_blank_lines=true
blank_line_after_tag="load,extends"
ignore="T003"
